--- a/public/locales/az/translation.json
+++ b/public/locales/az/translation.json
@@ -28,5 +28,26 @@
   "Almonds": "Badam",
   "Pistachios": "Püstə",
   "Dates": "Xurma",
-  "Walnuts": "Qoz"
+  "Walnuts": "Qoz",
+  "Top Favorite Fruits":"ƏN SEVİLƏN MEYVƏLƏR",
+  "Ananas":"Ananas",
+  "Apple":"Alma",
+  "Orange":"Portagal",
+  "text111":"Sizə müxtəlif insanların ən sevimli 4 meyvəsi təklif olunur. Tropik meyvələri heç vaxt sınamamış və Asiyada olmamışlar üçün bu maraqlı olacaq. Tropiklərdə kimin hansı meyvələri daha çox, hansını daha az bəyəndiyini və insanların ümumiyyətlə nə yediyini aydın görə bilərsiniz. Axı burada çoxlu miqdarda meyvə var, lakin onların hamısı gündəlik pəhrizə daxil edilmir.",
+  "bestfood":"Ən yaxşı məhsullar",
+  "Always Fresh":"Həmişə təzə",
+  "Organic":"Organic",
+  "Family healthy":"Ailə sağlamlığı",
+  "The best":"Ən yaxşı",
+  "Imported": "İmport edilmiş",
+  "Russian": "Rusiya",
+  "United Arab Emirates": "Birləşmiş Ərəb Əmirlikləri",
+  "Export": "İxracat",
+  "Chinese": "Çin",
+  "Turkey": "Türkiyə"
+
+
+
+
+
 }
