--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -28,5 +28,22 @@
   "Almonds": "  Almonds",
   "Pistachios": "  Pistachios",
   "Dates": "  Dates ",
-  "Walnuts": "Walnuts "
+  "Walnuts": "Walnuts ",
+  "Ananas": "Ananas",
+  "Apple": "Apple",
+  "Orange": "Orange",
+  "Top Favorite Fruits": "Top Favorite Fruits",
+  "text111": "You are offered top 4 most favorite fruits from different people. For those who have never tried tropical fruits and have not been to Asia, this will be interesting. You can clearly see who likes which fruits more, which ones less, and what people generally eat in the tropics. After all, there is a huge amount of fruits here, but not all of them are included in the daily diet.",
+  "bestfood": "We Grow Best Food",
+  "Always Fresh": "Always Fresh",
+  "Organic": "Organic",
+  "Family healthy": "Family healthy",
+  "The best": "The best",
+  "Imported": "Imported",
+  "Russian": "Russian",
+  "United Arab Emirates": "United Arab Emirates",
+  "Export": "Export",
+  "Chinese": "Chinese",
+  "Turkey": "Turkey"
+
 }
