--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -28,5 +28,22 @@
   "Almonds": "Миндаль",
   "Pistachios": "Фисташки",
   "Dates": "Финики",
-  "Walnuts": "Грецкие Орехи"
+  "Walnuts": "Грецкие Орехи",
+  "Ananas":"Ананас",
+  "Apple":"Яблоко",
+  "Orange":"Апельсин",
+  "Top Favorite Fruits":"ТОП ЛЮБИМЫХ ФРУКТОВ",
+  "text111":"Вам предлагаются топы-4 самых любимых фруктов от разных людей. Тем, кто ни разу не пробовал тропические фрукты и не был в Азии, это будет интересно. Вы можете наглядно увидеть, кто какие фрукты любит больше, какие меньше, и чем вообще люди в основном питаются в тропиках. Ведь фруктов здесь огромное количество, но не все они входят в ежедневный рацион.",
+  "bestfood":"Мы выращиваем лучшую еду",
+  "Always Fresh":"Всегда свежая",
+  "Organic":"Органическая",
+  "Family healthy":"Здоровая семья",
+  "The best":"Лучшая еда",
+  "Imported": "Импор",
+  "Russian": "Россия",
+  "United Arab Emirates": "Объединенные Арабские Эмираты",
+  "Export": "Экспорт",
+  "Chinese": "Китай",
+  "Turkey": "Турция"
+
 }
