--- a/public/locales/az/translation.json
+++ b/public/locales/az/translation.json
@@ -44,7 +44,11 @@
   "United Arab Emirates": "Birləşmiş Ərəb Əmirlikləri",
   "Export": "İxracat",
   "Chinese": "Çin",
-  "Turkey": "Türkiyə"
+  "Turkey": "Türkiyə",
+  "best1":"Mega Fruit ilk növbədə Azərbaycanda məhsulların topdan satışı ilə məşğul olur, biznesinizin ən yaxşı meyvə, tərəvəz və digər əsas ehtiyaclarını və s. təşviq edir.",
+  "best4":"Biz uzun müddətdir ki, biznesdəyik və keyfiyyətli və təzə meyvə və tərəvəzləri çox sərfəli qiymətə təqdim etmək üçün bazarda yaxşı reputasiya qazanmışıq.",
+  "best3":"Biz FRESH & FAIR qiymətə zəmanət veririk. Biz həmçinin sadiq müştərilərə üstünlüklər təqdim edirik və bir çox qonaqpərvərlik sənayesini təqdim edirik.",
+  "best2":"Biz bütün adi və ya dəbdəbəli əşyaları ilə geniş çeşiddə təzə meyvə və tərəvəzlər təklif edirik, meyvə-tərəvəz sənayesindəki nüfuzumuz və təcrübəmiz yalnız ən yüksək keyfiyyətli məhsulu təmin edəcəyimizə əmindir."
 
 
 
