--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -44,6 +44,9 @@
   "United Arab Emirates": "United Arab Emirates",
   "Export": "Export",
   "Chinese": "Chinese",
-  "Turkey": "Turkey"
-
+  "Turkey": "Turkey",
+  "best1": "Mega Fruit is first and foremost a wholesaler of products in Azerbaijan, promoting or the very best fruits, vegetables and other basic needs of your business, etc.",
+  "best4": "We have been in business for long time and have got good reputation in market for supplying quality and fresh fruit and veggies for very affordable price.",
+  "best3": "We guarantee on FRESH & FAIR price .we also provide benefits to loyal customers and we are catering many hospitality industry.",
+  "best2": "We offer a wide range of fresh fruit and vegetables with all its ordinary or fancy items, our reputation and experience in the fruit and vegetable industry assure that we will only supply the highest quality produce."
 }
