--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -44,6 +44,10 @@
   "United Arab Emirates": "Объединенные Арабские Эмираты",
   "Export": "Экспорт",
   "Chinese": "Китай",
-  "Turkey": "Турция"
+  "Turkey": "Турция",
+  "best1":"Mega Fruit — это, прежде всего, оптовый продавец продукции в Азербайджане, пропагандирующий или самые лучшие фрукты, овощи и другие основные потребности вашего бизнеса и т. д.",
+  "best4":"Мы работаем уже долгое время и заработали хорошую репутацию на рынке, поставляя качественные и свежие фрукты и овощи по очень доступной цене.",
+  "best3":"Мы гарантируем СВЕЖУЮ И СПРАВЕДЛИВУЮ цену. Мы также предоставляем преимущества постоянным клиентам и обслуживаем многие отрасли гостеприимства.",
+  "best2":"Мы предлагаем широкий ассортимент свежих фруктов и овощей, как обычных, так и изысканных, наша репутация и опыт в отрасли фруктов и овощей гарантируют, что мы будем поставлять продукцию только самого высокого качества."
 
 }
