--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,6 +1,6 @@
 {
   "langCode": "en",
-  "headertext": "Mega Fruit",
+  "headertext": "Mega Fruit Az",
   "contacts": "Contacts",
   "location": "Gazakh district, Upper Salahli",
 
@@ -32,8 +32,8 @@
   "Ananas": "Ananas",
   "Apple": "Apple",
   "Orange": "Orange",
-  "Top Favorite Fruits": "Top Favorite Fruits",
-  "text111": "You are offered top 4 most favorite fruits from different people. For those who have never tried tropical fruits and have not been to Asia, this will be interesting. You can clearly see who likes which fruits more, which ones less, and what people generally eat in the tropics. After all, there is a huge amount of fruits here, but not all of them are included in the daily diet.",
+  "Top Favorite Fruits":"Mega Fruit AZ",
+  "text111": "Mega Fruit Az is first and foremost a wholesaler of products in Azerbaijan, our reputation and experience in the fruit and vegetable industry ensures that we supply only the highest quality products. We guarantee a fresh and fair price, have been in business for a long time and have earned good reputation in the market.  ",
   "bestfood": "We Grow Best Food",
   "Always Fresh": "Always Fresh",
   "Organic": "Organic",
@@ -45,8 +45,8 @@
   "Export": "Export",
   "Chinese": "Chinese",
   "Turkey": "Turkey",
-  "best1": "Mega Fruit is first and foremost a wholesaler of products in Azerbaijan, promoting or the very best fruits, vegetables and other basic needs of your business, etc.",
-  "best4": "We have been in business for long time and have got good reputation in market for supplying quality and fresh fruit and veggies for very affordable price.",
-  "best3": "We guarantee on FRESH & FAIR price .we also provide benefits to loyal customers and we are catering many hospitality industry.",
-  "best2": "We offer a wide range of fresh fruit and vegetables with all its ordinary or fancy items, our reputation and experience in the fruit and vegetable industry assure that we will only supply the highest quality produce."
+  "best1": "Mega Fruit Az is, first of all, a wholesaler of products in Azerbaijan, the best fruits, vegetables and other basic needs of your business, etc.",
+  "best4": "We have been in business for a long time and have earned a good reputation in the market by supplying quality and fresh fruits and vegetables at a very affordable price.",
+  "best3": "We guarantee a fresh and fair price. We also provide the benefits to regular customers to always work with us and get the best prices.",
+  "best2": "We offer a wide range of gourmet fresh fruits and vegetables and our reputation and experience in the fruit and vegetable industry ensures that we supply only the highest quality products."
 }
