--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,6 +1,6 @@
 {
   "langCode": "ru",
-  "headertext": "Мега Фрукты",
+  "headertext": "Mega Fruit Az",
   "contacts": "Контакты",
   "location": "Газахский район, Верхний Салахлы",
 
@@ -32,22 +32,22 @@
   "Ananas":"Ананас",
   "Apple":"Яблоко",
   "Orange":"Апельсин",
-  "Top Favorite Fruits":"ТОП ЛЮБИМЫХ ФРУКТОВ",
-  "text111":"Вам предлагаются топы-4 самых любимых фруктов от разных людей. Тем, кто ни разу не пробовал тропические фрукты и не был в Азии, это будет интересно. Вы можете наглядно увидеть, кто какие фрукты любит больше, какие меньше, и чем вообще люди в основном питаются в тропиках. Ведь фруктов здесь огромное количество, но не все они входят в ежедневный рацион.",
+  "Top Favorite Fruits":"Mega Fruit AZ",
+  "text111":"Mega Fruit Az — это, прежде всего, оптовый продавец продукции в Азербайджане,наша репутация и опыт в отрасли фруктов и овощей гарантируют, что мы будем поставлять продукцию только самого высокого качества.Мы гарантируем свежию и справедливую цену, работаем уже долгое время и заработали хорошую репутацию на рынке.",
   "bestfood":"Мы выращиваем лучшую еду",
   "Always Fresh":"Всегда свежая",
   "Organic":"Органическая",
   "Family healthy":"Здоровая семья",
-  "The best":"Лучшая еда",
-  "Imported": "Импор",
+  "The best":"Мы лучшие",
+  "Imported": "Импорт",
   "Russian": "Россия",
   "United Arab Emirates": "Объединенные Арабские Эмираты",
   "Export": "Экспорт",
   "Chinese": "Китай",
   "Turkey": "Турция",
-  "best1":"Mega Fruit — это, прежде всего, оптовый продавец продукции в Азербайджане, пропагандирующий или самые лучшие фрукты, овощи и другие основные потребности вашего бизнеса и т. д.",
+  "best1":"Mega Fruit Az — это, прежде всего, оптовый продавец продукции в Азербайджане, самые лучшие фрукты, овощи и другие основные потребности вашего бизнеса и т. д.",
   "best4":"Мы работаем уже долгое время и заработали хорошую репутацию на рынке, поставляя качественные и свежие фрукты и овощи по очень доступной цене.",
-  "best3":"Мы гарантируем СВЕЖУЮ И СПРАВЕДЛИВУЮ цену. Мы также предоставляем преимущества постоянным клиентам и обслуживаем многие отрасли гостеприимства.",
-  "best2":"Мы предлагаем широкий ассортимент свежих фруктов и овощей, как обычных, так и изысканных, наша репутация и опыт в отрасли фруктов и овощей гарантируют, что мы будем поставлять продукцию только самого высокого качества."
+  "best3":"Мы гарантируем свежию и справедливую цену. Мы также предоставляем преимущества постоянным клиентам всегда работать с нами и получать лучшие цены.",
+  "best2":"Мы предлагаем широкий ассортимент изысканных свежих фруктов и овощей, наша репутация и опыт в отрасли фруктов и овощей гарантируют, что мы будем поставлять продукцию только самого высокого качества."
 
 }
