--- a/public/locales/az/translation.json
+++ b/public/locales/az/translation.json
@@ -1,6 +1,6 @@
 {
   "langCode": "az",
-  "headertext": "Mega Fruit",
+  "headertext": "Mega Fruit Az",
   "contacts": "Əlaqə",
   "location": "AZ3532,Gazax rayonu,Yuxari Salahli",
 
@@ -29,11 +29,11 @@
   "Pistachios": "Püstə",
   "Dates": "Xurma",
   "Walnuts": "Qoz",
-  "Top Favorite Fruits":"ƏN SEVİLƏN MEYVƏLƏR",
+  "Top Favorite Fruits":"Mega Fruit AZ",
   "Ananas":"Ananas",
   "Apple":"Alma",
   "Orange":"Portagal",
-  "text111":"Sizə müxtəlif insanların ən sevimli 4 meyvəsi təklif olunur. Tropik meyvələri heç vaxt sınamamış və Asiyada olmamışlar üçün bu maraqlı olacaq. Tropiklərdə kimin hansı meyvələri daha çox, hansını daha az bəyəndiyini və insanların ümumiyyətlə nə yediyini aydın görə bilərsiniz. Axı burada çoxlu miqdarda meyvə var, lakin onların hamısı gündəlik pəhrizə daxil edilmir.",
+  "text111":"Mega Fruit Az ilk növbədə Azərbaycanda məhsulların topdan satışı ilə məşğul olur, bizim meyvə-tərəvəz sənayesindəki reputasiyamız və təcrübəmiz yalnız yüksək keyfiyyətli məhsullar təqdim etməyimizi təmin edir.Biz təzə və ədalətli qiymətə zəmanət veririk, uzun müddətdir ki, fəaliyyət göstəririk. və bazarda yaxşı reputasiya qazandılar.",
   "bestfood":"Ən yaxşı məhsullar",
   "Always Fresh":"Həmişə təzə",
   "Organic":"Organic",
@@ -45,10 +45,10 @@
   "Export": "İxracat",
   "Chinese": "Çin",
   "Turkey": "Türkiyə",
-  "best1":"Mega Fruit ilk növbədə Azərbaycanda məhsulların topdan satışı ilə məşğul olur, biznesinizin ən yaxşı meyvə, tərəvəz və digər əsas ehtiyaclarını və s. təşviq edir.",
-  "best4":"Biz uzun müddətdir ki, biznesdəyik və keyfiyyətli və təzə meyvə və tərəvəzləri çox sərfəli qiymətə təqdim etmək üçün bazarda yaxşı reputasiya qazanmışıq.",
-  "best3":"Biz FRESH & FAIR qiymətə zəmanət veririk. Biz həmçinin sadiq müştərilərə üstünlüklər təqdim edirik və bir çox qonaqpərvərlik sənayesini təqdim edirik.",
-  "best2":"Biz bütün adi və ya dəbdəbəli əşyaları ilə geniş çeşiddə təzə meyvə və tərəvəzlər təklif edirik, meyvə-tərəvəz sənayesindəki nüfuzumuz və təcrübəmiz yalnız ən yüksək keyfiyyətli məhsulu təmin edəcəyimizə əmindir."
+  "best1":"Mega Fruit Az ilk növbədə Azərbaycanda məhsulların, ən yaxşı meyvə-tərəvəzin və biznesinizin digər əsas ehtiyaclarının topdan satışı və s.",
+  "best4":"Biz uzun müddətdir ki, biznesdəyik və keyfiyyətli və təzə meyvə və tərəvəzləri çox sərfəli qiymətə təqdim etməklə bazarda yaxşı reputasiya qazanmışıq.",
+  "best3":" Biz təzə və ədalətli qiymətə zəmanət veririk. Biz həmçinin daimi müştərilərə həmişə bizimlə işləmək və ən yaxşı qiymətləri əldə etmək üçün üstünlüklər təqdim edirik.",
+  "best2":"Biz geniş çeşiddə təzə meyvə və tərəvəz təklif edirik və meyvə-tərəvəz sənayesindəki nüfuzumuz və təcrübəmiz yalnız ən yüksək keyfiyyətli məhsullar təqdim etməyimizi təmin edir."
 
 
 
