--- a/public/locales/az/translation.json
+++ b/public/locales/az/translation.json
@@ -39,7 +39,7 @@
   "Organic":"Organic",
   "Family healthy":"Ailə sağlamlığı",
   "The best":"Ən yaxşı",
-  "Imported": "İmport edilmiş",
+  "Imported": "İmport ",
   "Russian": "Rusiya",
   "United Arab Emirates": "Birləşmiş Ərəb Əmirlikləri",
   "Export": "İxracat",
